[project]
name = "mex-common"
version = "0.24.0"
description = "Common library for MEx python projects."
authors = [{ name = "MEx Team", email = "mex@rki.de" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
urls = { Repository = "https://github.com/robert-koch-institut/mex-common" }
requires-python = "<3.13,>=3.11"
dependencies = [
    "backoff~=2.1.0"
]
[project.optional-dependencies]
dev = [
    "black~=23.0",
    "click~=8.0.4",
    "langdetect==1.0.0",
    "ldap3~=2.8"
]



[tool.cruft]
template = "https://github.com/robert-koch-institut/mex-template"
skip = ["CHANGELOG.md", "mex", "tests"]

[tool.ipdb]
context = 5

[tool.mypy]
python_version = "3.11"
show_error_codes = true
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = 'langdetect.*'
ignore_missing_imports = true

[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend>=2.1.8"]
build-backend = "pdm.backend"
